added baseComponents, router, some pages

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,6 @@
-@import url('./reset.scss');
-@import url('./global.scss');
-@import url('./variables.scss');
+@import './reset';
+@import './global';
+@import './variables';
 
 body{
   color: var(--text-color)
