--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,4 +1,4 @@
-*, *:before, *:after{
+*, *::before, *::after{
   box-sizing: border-box;
 }
 
@@ -6,10 +6,10 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   text-size-adjust: none;
 }
@@ -30,7 +30,7 @@ blockquote, q{
   quotes: none;
 }
 
-blockquote:before, blockquote:after, q:before, q:after{
+blockquote::before, blockquote::after, q::before, q::after{
   content: '';
   content: none;
 }
@@ -41,6 +41,11 @@ table{
 }
 
 input{
-  -webkit-appearance: none;
+  appearance: none;
   border-radius: 0;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
 }
