--- a/src/shared/ui/MainLayout/styles.module.scss
+++ b/src/shared/ui/MainLayout/styles.module.scss
@@ -1,10 +1,7 @@
 .MainLayout {  display: grid;
-  grid-template-columns: minmax(16%, 250px) 1fr;
-  grid-template-rows: 1fr;
-  gap: 0px 0px;
+  grid-template: "Sidebar Main" 1fr / minmax(16%, 250px) 1fr;
+  gap: 0 0;
   grid-auto-flow: row;
-  grid-template-areas:
-    "Sidebar Main";
   height: 100vh;
 }
 
