--- a/src/widgets/Sidebar/ui/styles.module.scss
+++ b/src/widgets/Sidebar/ui/styles.module.scss
@@ -1,6 +1,14 @@
 .Sidebar {
   grid-area: Sidebar;
   padding: 48px 0 48px 38px ;
-  border-right: 1px solid red;
   background-color: var(--sidebar-bg);
+  display: flex;
+  flex-direction: column;
+
+  &__menus{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
 }
