added ErrorBoundary, Button

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,9 @@
 @import './reset';
 @import './global';
 @import './variables';
+@import "./functions";
 
 body{
-  color: var(--text-color)
+  color: var(--text-color);
+  font-size: 16px;
 }
