--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,4 +1,8 @@
+@import "./functions";
+
 :root {
   --text-color: #F9F9F9;
   --primary-color: #00B9AE;
+  --primary-color-button-text: #16181E;
+  --button-bg: rgb(249 249 249 / 20%);
 }
