--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -6,6 +6,7 @@
   padding: 16px 47px;
   display: flex;
   align-items: center;
+  justify-content: center;
   color: var(--text-color);
   background: var(--button-bg);
   cursor: pointer;
@@ -14,4 +15,31 @@
     background-color: var(--primary-color);
     color: var(--primary-color-button-text);
   }
+
+  &.secondaryButton{
+    background: var(--button-bg);
+    color: var(--text-color);
+  }
+
+  &.rectangle{
+    width: 190px;
+  }
+
+  &.square{
+    width: 57px;
+    height: 57px;
+    padding: 20px;
+  }
+
+  &.iconTextButton{
+    width: auto;
+    gap: 15px;
+    padding: 20px 25px;
+    align-items: center;
+  }
+
+  &.icon{
+    padding: 0;
+  }
 }
+
