add portal and format

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,8 +1,8 @@
 @import "./functions";
 
 :root {
-  --text-color: #F9F9F9;
-  --primary-color: #00B9AE;
-  --primary-color-button-text: #16181E;
+  --text-color: #f9f9f9;
+  --primary-color: #00b9ae;
+  --primary-color-button-text: #16181e;
   --button-bg: rgb(249 249 249 / 20%);
 }
