--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,6 +1,5 @@
 :root {
-  --sidebar-bg: #21242D;
-  --main-bg: #16181E;
+  --sidebar-bg: #21242d;
+  --main-bg: #16181e;
   --error-bg: #161622;
-
 }
