--- a/src/shared/ui/Logo/styles.module.scss
+++ b/src/shared/ui/Logo/styles.module.scss
@@ -7,7 +7,7 @@
   text-transform: uppercase;
   margin-bottom: 70px;
 
-  &_primary{
-    color: var(--primary-color)
+  &_primary {
+    color: var(--primary-color);
   }
 }
