--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,9 +1,9 @@
-@import './reset';
-@import './global';
-@import './variables';
+@import "./reset";
+@import "./global";
+@import "./variables";
 @import "./functions";
 
-body{
+body {
   color: var(--text-color);
   font-size: 16px;
 }
