--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,4 +6,8 @@
 body {
   color: var(--text-color);
   font-size: 16px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
